<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Phone Saver</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">BattBoosterService</string>
    <string name="onoff_service">onOffEventHandler</string>
    <string name="sync_frequency">Connect Every</string>
    <string name="mins_txt">Mins</string>
    <string name="wifi_text">Wi - Fi</string>
    <string name="mobile_data_text">Mobile Data</string>
    <string name="cache_cleaner_text">Clean Cache</string>
    <string name="btn_start">Start Cycle</string>
    <string name="btn_stop_service">Stop Cycle</string>
    <string name="admob_id">ca-app-pub-2208800570838383/9382544750</string> 
    <string name="admob_interstitial_id">ca-app-pub-2208800570838383/1859277959</string>
    <string name="admob_old_id">ca-app-pub-5761877978588731/9869647609</string>
    <string name="admob_interstitial_id_old">ca-app-pub-5761877978588731/2535707201</string>
</resources>
