<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <com.google.android.gms.ads.AdView android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2208800570838383/9382544750" />
    <View style="@style/horizintalBlank" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <View style="@style/verticalBlank" />
        <TextView android:id="@+id/sync_frequency" 
            android:layout_gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_frequency"
            style="@style/enabledBigText" />
        <View style="@style/verticalBlank" />
        <Spinner android:id="@+id/minsSpinner" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />
        <View style="@style/verticalBlank" />
        <TextView android:id="@+id/mins_txt"
            android:layout_gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mins_txt"
            style="@style/enabledBigText" />
        <View style="@style/verticalBlank" />
    </LinearLayout>
    <View style="@style/ThinHorizontalSeparator" />
    <View style="@style/horizintalBlank" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <View style="@style/verticalBlank" />
        <ImageView android:id="@+id/ic_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wifi_on"
            android:onClick="onWifiImgClick" />
        <View style="@style/verticalBlank" />
        <TextView android:id="@+id/wifi_text"
            android:layout_gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_text" />
        <View style="@style/verticalBlank" />
        <Switch android:id="@+id/wifi_switch" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:onClick="onWifiSwitchClick" />
        <View style="@style/verticalBlank" />
    </LinearLayout>
    <View style="@style/horizintalBlank" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <View style="@style/verticalBlank" />
        <ImageView android:id="@+id/ic_mobile_data" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/mobile_data_off"
            android:onClick="onMobDataImgClick" />
        <View style="@style/verticalBlank" />
        <TextView android:id="@+id/mobile_data_text" 
            android:layout_gravity="top"  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/mobile_data_text" />
        <View style="@style/verticalBlank" />
        <Switch android:id="@+id/mobile_data_switch" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:onClick="onMobileDataSwitchClick"/>
        <View style="@style/verticalBlank" /> 
    </LinearLayout>
    <View style="@style/horizintalBlank" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <View style="@style/verticalBlank" />
        <ImageView android:id="@+id/ic_cache_cleaner" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/cache_cleaner_off" 
            android:onClick="onCacheCleanerImgClick" />
        <View style="@style/verticalBlank" />
        <TextView android:id="@+id/cache_cleaner_text"
            android:layout_gravity="top"  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/cache_cleaner_text" />
        <View style="@style/verticalBlank" />
        <Switch android:id="@+id/cache_cleaner_switch" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:onClick="onCacheCleanerSwitchClick" />
        <View style="@style/verticalBlank" />
    </LinearLayout>
    <View style="@style/horizintalBlank" />
    <View style="@style/ThinHorizontalSeparator" />
    <Button android:id="@+id/startStopButton" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/btn_start" 
        android:onClick="onButtonClick"
        android:background="@drawable/start_button_bg" />
    <View style="@style/horizintalBlank" />
    <View style="@style/ThickHorizontalSeparator" />
    <View style="@style/horizintalBlank" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <View style="@style/verticalBlank" />
        <ImageView android:id="@+id/ic_instant_wifi" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/wifi_on" 
            android:onClick="onInstWifiImgClick" />
        <View style="@style/verticalBlank" />
        <ImageView android:id="@+id/ic_inst_mobile_data" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/mobile_data_off" 
            android:onClick="onInstMobDataImgClick" />
        <View style="@style/verticalBlank" />
        <ImageView android:id="@+id/ic_inst_cache_cleaner" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:src="@drawable/cache_cleaner_on" 
            android:onClick="onInstCacheCleanerImgClick" />
        <View style="@style/verticalBlank" />
    </LinearLayout>
    <View style="@style/horizintalBlank" />
</LinearLayout>